Wind speed vizualization added

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,8 @@
                 <canvas id="cloudyChart" width="1000" height="200"></canvas>
                 <h5>Wilgotność</h5>
                 <canvas id="humidityChart" width="1000" height="200"></canvas>
-
+                <h5>Prędkość wiatru</h5>
+                <canvas id="windSpeedChart" width="1000" height="200"></canvas>
             </div>
         </div>
 
