--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,15 @@
 
     <body>
         <div class="container">
-            <div class="section">
-                <div class="weather">
-                </div>
-                <br>
-                <label for="date">Data:</label>
-                <input id="date" type="date" class="datepicker" onchange="updateWeatherData()">
+            <label for="date">Data:</label>
+            <input id="date" type="date" class="datepicker" onchange="updateWeatherData()">
+
+            <ul class="tabs">
+                <li class="tab col s2"><a href="#weather">Pogoda</a></li>
+                <li class="tab col s2"><a class="active" href="#smog">Smog</a></li>
+            </ul>
+
+            <div id="weather" class="col s12">
                 <h5>Temperatura</h5>
                 <canvas id="temperatureChart" width="1000" height="200"></canvas>
                 <h5>Zachmurzenie</h5>
@@ -26,9 +29,14 @@
                 <h5>Prędkość wiatru</h5>
                 <canvas id="windSpeedChart" width="1000" height="200"></canvas>
             </div>
+
+            <div id="smog" class="col s12">
+            </div>
         </div>
 
         <script src="weahterScripts.js"></script>
+        <script src="smogScripts.js"></script>
+
         <script>
             $('.datepicker').pickadate({
             selectMonths: true, // Creates a dropdown to control month
