--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,27 @@
 
     <body>
         <div class="container">
-            <label for="date">Data:</label>
-            <input id="date" type="date" class="datepicker" onchange="updateWeatherData()">
+            <div class="section">
+                <div class="row">
+                    <div class="col s6">
+                        <label for="date">Data:</label>
+                        <input id="date" type="date" class="datepicker" onchange="updateWeatherData(); updateSmogData();">
+                    </div>
 
+                    <div class="input-field col s6">
+                        <select id="station" onchange="updateSmogData()">
+                            <option value="" disabled selected>Wybierz stację</option>
+                            <option value="6">Stacja 6</option>
+                            <option value="7">Stacja 7</option>
+                            <option value="16">Stacja 16</option>
+                            <option value="149">Stacja 149</option>
+                            <option value="152">Stacja 152</option>
+                            <option value="153">Stacja 153</option>
+                        </select>
+                        <label for="station">Stacja:</label>
+                    </div>
+                </div>
+            </div>
             <ul class="tabs">
                 <li class="tab col s2"><a href="#weather">Pogoda</a></li>
                 <li class="tab col s2"><a class="active" href="#smog">Smog</a></li>
@@ -43,6 +61,10 @@
             selectYears: 15, // Creates a dropdown of 15 years to control year
             format: 'dd-mm-yyyy'
         });
+        $(document).ready(function() {
+            $('select').material_select();
+        });
+
         </script>
     </body>
 </html>
