--- a/public/index.html
+++ b/public/index.html
@@ -15,13 +15,13 @@
                 <div class="row">
                     <div class="col s6">
                         <label for="date">Data:</label>
-                        <input id="date" type="date" class="datepicker" onchange="updateWeatherData(); updateSmogData();">
+                        <input id="date" type="date" class="datepicker" placeholder="02-03-2014" onchange="updateWeatherData(); updateSmogData();">
                     </div>
 
                     <div class="input-field col s6">
                         <select id="station" onchange="updateSmogData()">
-                            <option value="" disabled selected>Wybierz stację</option>
-                            <option value="6">Stacja 6</option>
+                            <option value="" disabled>Wybierz stację</option>
+                            <option selected value="6">Stacja 6</option>
                             <option value="7">Stacja 7</option>
                             <option value="16">Stacja 16</option>
                             <option value="149">Stacja 149</option>
@@ -36,7 +36,6 @@
                 <li class="tab col s2"><a href="#weather">Pogoda</a></li>
                 <li class="tab col s2"><a class="active" href="#smog">Smog</a></li>
             </ul>
-
             <div id="weather" class="col s12">
                 <h5>Temperatura</h5>
                 <canvas id="temperatureChart" width="1000" height="200"></canvas>
